deploy/ctfd-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ctfd
  creationTimestamp: null
  name: ctfd-nginx
  labels:
    ctfd: nginx
    app: ctfd-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        ctfd: nginx
        app: ctfd-nginx
    spec:
      containers:
      - image: nginx:1.17
        imagePullPolicy: ""
        name: ctfd-nginx
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx/
          readOnly: true
          name: ctfd-nginx-conf
      restartPolicy: Always
      serviceAccountName: ""
      automountServiceAccountToken: false
      volumes:
      - name: ctfd-nginx-conf
        configMap:
          name: ctfd-nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ctfd
  creationTimestamp: null
  labels:
    app: ctfd-nginx
  name: ctfd-nginx
spec:
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ctfd-nginx
  type: ClusterIP
status: {}
---
